--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
- <HTML lang>
-      <head >
-         <title>tecnologia da informação</title>
-    </head>
-    <body body class="conteúdo">
-        <h1 class="título">
-COMO SE PROTEGER DE ATAQUES HACKERS
-        </h1>
-    </body>
- </HTML>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body class="conteúdo">
+    <h1 class="título">
+         DICAS DE SEGURANÇA NA INTERNET
+    </h1>
+    <img src="" width="150" height="150" alt="Ocorreu um erro ao carregar esta foto">
+    <p> </p>
+
+</body>
+</html>
