--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="título">
          DICAS DE SEGURANÇA NA INTERNET
     </h1>
-    <img src="" width="150" height="150" alt="Ocorreu um erro ao carregar esta foto">
+    <img src="arquivos/Downloads/phishing.jpeg" width="150" height="150" alt="Ocorreu um erro ao carregar esta foto">
     <p> </p>
 
 </body>
