--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body class="conteúdo">
     <h1 class="título">
-         DICAS DE SEGURANÇA NA INTERNET
+         COMO FUNCIONA UM ATAQUE DE PHISHING
     </h1>
+    <p> Um phishing é uma técnica hacker, o qual tem como objetivo capturar informações pessoais de uma pessoa, como senhas</p>
     <img src="arquivos/Downloads/phishing.jpeg" width="150" height="150" alt="Ocorreu um erro ao carregar esta foto">
-    <p> </p>
-
 </body>
 </html>
